--- a/index.html
+++ b/index.html
@@ -127,30 +127,44 @@
 
             <div class="nav-menu" id="nav-menu">
                 <ul class="nav-links" role="menubar">
-                    <li role="none"><a href="#como-usar" class="nav-link" role="menuitem">Cómo usar</a></li>
-                    <li role="none"><a href="#caracteristicas" class="nav-link" role="menuitem">Características</a></li>
-                    <li role="none"><a href="#planes" class="nav-link" role="menuitem">Planes</a></li>
+                    <li role="none"><a href="#como-usar" class="nav-link" role="menuitem">
+                        <span>Cómo usar</span>
+                    </a></li>
+                    <li role="none"><a href="#caracteristicas" class="nav-link" role="menuitem">
+                        <span>Características</span>
+                    </a></li>
+                    <li role="none"><a href="#planes" class="nav-link" role="menuitem">
+                        <span>Planes</span>
+                    </a></li>
                 </ul>
             </div>
 
             <button class="nav-toggle" aria-label="Abrir menú de navegación" aria-expanded="false"
-                aria-controls="nav-menu" aria-haspopup="true">
-                <span class="nav-toggle-line"></span>
-                <span class="nav-toggle-line"></span>
-                <span class="nav-toggle-line"></span>
+                aria-controls="nav-mobile" aria-haspopup="true">
+                <span class="nav-toggle-line" aria-hidden="true"></span>
+                <span class="nav-toggle-line" aria-hidden="true"></span>
+                <span class="nav-toggle-line" aria-hidden="true"></span>
+                <span class="sr-only">Menú</span>
             </button>
         </nav>
 
-        <div class="nav-mobile" aria-hidden="true" id="nav-mobile" role="navigation" aria-label="Menú móvil">
+        <aside class="nav-mobile" aria-hidden="true" id="nav-mobile" role="dialog" aria-label="Menú de navegación móvil" aria-modal="true">
             <div class="nav-mobile-content">
-                <ul class="nav-mobile-links" role="menubar">
-                    <li role="none"><a href="#como-usar" class="nav-mobile-link" role="menuitem">Cómo usar</a></li>
-                    <li role="none"><a href="#caracteristicas" class="nav-mobile-link"
-                            role="menuitem">Características</a></li>
-                    <li role="none"><a href="#planes" class="nav-mobile-link" role="menuitem">Planes</a></li>
-                </ul>
+                <nav role="navigation" aria-label="Navegación móvil">
+                    <ul class="nav-mobile-links" role="menubar">
+                        <li role="none"><a href="#como-usar" class="nav-mobile-link" role="menuitem">
+                            <span>Cómo usar</span>
+                        </a></li>
+                        <li role="none"><a href="#caracteristicas" class="nav-mobile-link" role="menuitem">
+                            <span>Características</span>
+                        </a></li>
+                        <li role="none"><a href="#planes" class="nav-mobile-link" role="menuitem">
+                            <span>Planes</span>
+                        </a></li>
+                    </ul>
+                </nav>
             </div>
-        </div>
+        </aside>
     </header>
 
     <main>
@@ -1351,6 +1365,8 @@
         </div>
     </footer>
 
+    <!-- Scripts -->
+    <script src="gesty-landing-scripts.js"></script>
 </body>
 
 
