--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                                 <li>
                                     <span class="step-list-icon" aria-hidden="true">👆</span>
                                     <div class="step-list-content">
-                                        <strong>Acceder:</strong> Presiona el botón en forma de cartera que está arriba
+                                        <strong>Acceder:</strong> Presiona el botón en forma de mundo que está arriba
                                         a la derecha en cualquier cliente.
                                     </div>
                                 </li>
