--- a/index.html
+++ b/index.html
@@ -1033,6 +1033,56 @@
                         <article class="step-card-container" role="listitem">
                             <div class="step-card card-responsive">
                                 <header class="step-header">
+                                    <span class="step-number" aria-label="Gastos">💸</span>
+                                        <h3 class="step-title">Pantalla de Gastos</h3>
+                                </header>
+                                <div class="step-content">
+                                    <p>Gestiona y visualiza todos tus gastos de negocio de forma organizada y eficiente.
+                                    </p>
+                                    <ol class="step-list">
+                                        <li>
+                                            <span class="step-list-icon" aria-hidden="true">👆</span>
+                                            <div class="step-list-content">
+                                                <strong>Acceder:</strong> Navega desde el menú principal o la barra de
+                                                navegación inferior.
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <span class="step-list-icon" aria-hidden="true">🔍</span>
+                                            <div class="step-list-content">
+                                                <strong>Buscar:</strong> Utiliza la barra de búsqueda para encontrar
+                                                gastos específicos por concepto.
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <span class="step-list-icon" aria-hidden="true">📅</span>
+                                            <div class="step-list-content">
+                                                <strong>Organización:</strong> Los gastos se agrupan automáticamente por
+                                                fecha (Hoy, Esta semana, Este mes, Anteriores).
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <span class="step-list-icon" aria-hidden="true">✏️</span>
+                                            <div class="step-list-content">
+                                                <strong>Editar:</strong> Toca cualquier gasto para editarlo o mantén
+                                                presionado para ver más opciones.
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <span class="step-list-icon" aria-hidden="true">➕</span>
+                                            <div class="step-list-content">
+                                                <strong>Nuevo Gasto:</strong> Presiona el botón flotante "Nuevo Gasto"
+                                                para registrar un gasto adicional.
+                                            </div>
+                                        </li>
+                                    </ol>
+                                </div>
+                            </div>
+                        </article>
+
+                        <article class="step-card-container" role="listitem">
+                            <div class="step-card card-responsive">
+                                <header class="step-header">
                                     <span class="step-number" aria-label="Organizar">📂</span>
                                     <h3 class="step-title">
                                         Organizar y Navegar la Lista
