--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
 
             <div class="nav-menu" id="nav-menu">
                 <ul class="nav-links" role="menubar">
+                    <li role="none"><a href="#que-es-gesty" class="nav-link" role="menuitem">
+                            <span>Qué es Gesty</span>
+                        </a></li>
                     <li role="none"><a href="#como-usar" class="nav-link" role="menuitem">
                             <span>Cómo usar</span>
                         </a></li>
@@ -153,6 +156,9 @@
             <div class="nav-mobile-content">
                 <nav role="navigation" aria-label="Navegación móvil">
                     <ul class="nav-mobile-links" role="menubar">
+                        <li role="none"><a href="#que-es-gesty" class="nav-mobile-link" role="menuitem">
+                                <span>Qué es Gesty</span>
+                            </a></li>
                         <li role="none"><a href="#como-usar" class="nav-mobile-link" role="menuitem">
                                 <span>Cómo usar</span>
                             </a></li>
@@ -215,6 +221,115 @@
                 </div>
             </div>
         </section>
+
+        <!-- Sección: Qué es Gesty -->
+<section class="about-gesty" id="que-es-gesty" aria-labelledby="about-title">
+    <div class="container">
+        <header class="section-header">
+            <h2 class="section-title" id="about-title">¿Qué es Gesty?</h2>
+            <p class="section-subtitle">La aplicación especializada para negocios de ventas a crédito y fiado</p>
+        </header>
+
+        <div class="about-content">
+            <div class="about-main">
+                <div class="about-text">
+                    <p class="about-intro">
+                        <strong>Gesty</strong> es una aplicación móvil especializada en la gestión de negocios
+                        que manejan ventas "al fiado" (a crédito), diseñada específicamente para pequeños comerciantes y
+                        empresarios que necesitan un control detallado de sus operaciones crediticias.
+                    </p>
+
+                    <p class="about-description">
+                        Con Gesty puedes llevar un registro completo de tus clientes, productos, pedidos,
+                        movimientos financieros (abonos y cargos), gastos del negocio y generar reportes profesionales. La
+                        aplicación está optimizada para el modelo de negocio de ventas a crédito, con sincronización en la
+                        nube para mantener tu información siempre actualizada y segura.
+                    </p>
+
+                    <div class="about-highlights">
+                        <div class="highlight-item">
+                            <div class="highlight-icon">🏪</div>
+                            <div class="highlight-content">
+                                <h3>Especializado en Ventas a Crédito</h3>
+                                <p>Optimizado específicamente para negocios que manejan ventas "al fiado" y
+                                    operaciones crediticias con clientes</p>
+                            </div>
+                        </div>
+
+                        <div class="highlight-item">
+                            <div class="highlight-icon">📦</div>
+                            <div class="highlight-content">
+                                <h3>Control Integral de Inventario</h3>
+                                <p>Gestiona productos, pedidos de clientes y movimientos de inventario
+                                    desde una sola aplicación</p>
+                            </div>
+                        </div>
+
+                        <div class="highlight-item">
+                            <div class="highlight-icon">💰</div>
+                            <div class="highlight-content">
+                                <h3>Seguimiento Detallado de Movimientos</h3>
+                                <p>Registra abonos, cargos y gastos por cliente con reportes automáticos
+                                    y análisis financiero completo</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="about-visual">
+                    <div class="about-stats">
+                        <div class="stat-item">
+                            <div class="stat-number">100%</div>
+                            <div class="stat-label">Gratuito</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-number">☁️</div>
+                            <div class="stat-label">Sincronización</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-number">📱</div>
+                            <div class="stat-label">Multiplataforma</div>
+                        </div>
+                    </div>
+
+                    <div class="about-features-preview">
+                        <div class="feature-badge">
+                            <span class="badge-icon">🏪</span>
+                            <span class="badge-text">Ventas al Fiado</span>
+                        </div>
+                        <div class="feature-badge">
+                            <span class="badge-icon">📦</span>
+                            <span class="badge-text">Control de Productos</span>
+                        </div>
+                        <div class="feature-badge">
+                            <span class="badge-icon">💰</span>
+                            <span class="badge-text">Abonos y Cargos</span>
+                        </div>
+                        <div class="feature-badge">
+                            <span class="badge-icon">☁️</span>
+                            <span class="badge-text">Sincronización</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="about-cta">
+                <div class="cta-content">
+                    <h3>¿Listo para optimizar tu negocio de ventas a crédito?</h3>
+                    <p>Únete a miles de comerciantes que ya confían en Gesty para gestionar sus operaciones
+                        de fiado</p>
+                    <a href="https://play.google.com/store/apps/details?id=com.miempresa.mifiado"
+                        class="btn btn-primary large store-btn">
+                        <svg class="store-icon" aria-hidden="true">
+                            <use href="#i-google-play" />
+                        </svg>
+                        <span>Descargar Gesty Gratis</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
         <!-- Índice de navegación -->
         <section class="index-nav" aria-labelledby="index-title">
@@ -1034,7 +1149,7 @@
                             <div class="step-card card-responsive">
                                 <header class="step-header">
                                     <span class="step-number" aria-label="Gastos">💸</span>
-                                        <h3 class="step-title">Pantalla de Gastos</h3>
+                                    <h3 class="step-title">Pantalla de Gastos</h3>
                                 </header>
                                 <div class="step-content">
                                     <p>Gestiona y visualiza todos tus gastos de negocio de forma organizada y eficiente.
